# crc32c

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs  crc32c.c
.github/workflows/: build.yml
benches/: rand.rs
src/: combine.rs  hasher.rs  hw.rs  hw_aarch64.rs  hw_tables.rs  hw_x86_64.rs  io.rs  lib.rs  sw.rs  util.rs
src/hw/: mod.rs  table.rs
src/sw/: mod.rs  table.rs
tests/: simple.rs
