[package]
name = "crc32c"
version = "0.4.0"
authors = ["Zack Owens"]
license = "Apache-2.0/MIT"
keywords = ["crc", "simd"]
categories = ["algorithms"]
repository = "https://github.com/zowens/crc32c"
homepage = "https://github.com/zowens/crc32c"
documentation = "http://docs.rs/crc32c"
description = "Wrapper for SSE 4.2 CRC32C instructions, with software fallback"
exclude = [
    "benches/*",
    "tests/*",
]
build = "build.rs"

[dev-dependencies]
rand = "0.4"
criterion = "0.2.5"

[[bench]]
name = "rand"
harness = false
